--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxs-mouse-alt skills__icon'></i>
-                                <span class="skills__name">Python, C++, React.js, Node.js, Vue, SQL</span>
+                                <span class="skills__name">Python, C++, GoLang, SQL</span>
                             </div>
                             <div class="skills__bar skills__css">
                                 
@@ -102,7 +102,7 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxs-mouse-alt skills__icon' ></i>
-                                <span class="skills__name">Bootstrap, Django</span>
+                                <span class="skills__name">Bootstrap, Django, React.js, Node.js, Vue</span>
                             </div>
                             <div class="skills__bar skills__js">
                                 
