--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
                     <div class="work__img">
                         <a href="https://adellalindsy.pythonanywhere.com/" class="work__img"><img src="assets/img/work4.jpg" alt="">Ecommerce Web App</a>
                     </div>
-                
+                    <div class="work__img">
+                        <a href="https://www.smarteam3d.com/" class="work__img"><img src="assets/img/work5.jpg" alt="">SmarTeam3D.com</a>
+                    </div>
                 </div>
             </section>
 
