--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
                     <div class="work__img">
                         <a href="https://adellalindsy.pythonanywhere.com/" class="work__img"><img src="assets/img/work4.jpg" alt="">Ecommerce Web App</a>
                     </div>
+                    <div class="work__img">
+                        <a href="https://gtccampus.com/" class="work__img"><img src="assets/img/work5.jpg" alt="">GCT Campus</a>
+                    </div>
                     
                 </div>
             </section>
