--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Sajini</span><br>Web Developer</h1>
+                    <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Sajini</span><br>Software Developer</h1>
 
                     <a href="#" class="button">Find me</a>
                 </div>
@@ -65,7 +65,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'm Sajini</h2>
-                        <p class="about__text">Enthusiastic professional with more than 1 1/2 years of experience as Web Developer. I’m passionate about creating great product experiences with clean and maintainable code.</p>   
+                        <p class="about__text">Enthusiastic professional with more than 1 1/2 years of experience as Software Developer. I’m passionate about creating great product experiences with clean and maintainable code.</p>   
                         <p class="about__text">Favourite Tech Youtubers: MKBHD | Dave Lee | Wes Bos</p>        
                     </div>                                   
                 </div>
