--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'm Sajini</h2>
-                        <p class="about__text">Enthusiastic professional with more than 1 1/2 years of experience as Software Developer. I’m passionate about creating great product experiences with clean and maintainable code.</p>   
+                        <p class="about__text">Enthusiastic professional with more than 2 years of experience as Software Developer. I’m passionate about creating great product experiences with clean and maintainable code.</p>   
                         <p class="about__text">Favourite Tech Youtubers: MKBHD | Dave Lee | Wes Bos</p>        
                     </div>                                   
                 </div>
