--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'm Sajini</h2>
-                        <p class="about__text">Enthusiastic professional with more than 2 years of experience as Software Developer. I’m passionate about creating great product experiences with clean and maintainable code.</p>   
+                        <p class="about__text">Enthusiastic professional with more than 4 years of experience as Software Developer. I’m passionate about creating great product experiences with clean and maintainable code.</p>   
                         <p class="about__text">Favourite Tech Youtubers: MKBHD | Dave Lee | Wes Bos</p>        
                     </div>                                   
                 </div>
@@ -112,7 +112,7 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxs-mouse-alt skills__icon'></i>
-                                <span class="skills__name">GitHub, Linux Ubuntu, Microsoft Azure</span>
+                                <span class="skills__name">GitHub, Linux Ubuntu, Microsoft Azure, Docker</span>
                             </div>
                             <div class="skills__bar skills__ux">
                                 
@@ -164,7 +164,7 @@
                 <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
-            <p>&#169; 2023 copyright all right reserved</p>
+            <p>&#169; 2025 copyright all right reserved</p>
         </footer>
 
 
